se adapta para que solo llame al microfront header

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -1,12 +1,12 @@
 <single-spa-router>
   <main>
-    <route path="/header">
+    <!-- <route path="/header">
       <application name="@org/header"></application>
-    </route>
+    </route> -->
     <!-- <route path="footer">
       <application name="@org/footer"></application>
     </route> -->
   </main>
   <!-- asi este componente queda fijo para todas las pantallas -->
-  <application name="@org/footer"></application>
+  <application name="@org/header"></application>
 </single-spa-router>
